fixed registration spacing issue

--- a/SiriusOrderClient/WebContent/css/registration.css
+++ b/SiriusOrderClient/WebContent/css/registration.css
@@ -89,10 +89,13 @@ html body{
 		overflow: hidden;
 	}
 	#password-error{
-		height: 15px;
+		
 	}
 	.error-above-register{
 		height: 15px;
+	}
+	#email-error-spacing{
+		
 	}
 }
 @media only screen and (min-width: 768px) {
@@ -150,6 +153,9 @@ html body{
 	.error-div{
 		display: none;
 	}
+	#email-error-spacing{
+		display: none !important;
+	}
 }
 @media only screen and (min-width: 800px) {
 	body{
@@ -203,6 +209,9 @@ html body{
 	}
 	.error-div{
 		display: none;
+	}
+	#email-error-spacing{
+		display: none !important;
 	}
 }
 
